--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
     compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
     compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
+    compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
     compile "com.badlogicgames.box2dlights:box2dlights:1.4"
     compile "com.strongjoshua:libgdx-inGameConsole:0.9.0"
     compile group: 'com.esotericsoftware.spine', name: 'spine-libgdx', version: '3.5.51.1'
